<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Degree Planner</string>
    <string name="action_settings">Settings</string>
    <string name="IdAndPasswordWelcome">Welcome, Please insert your UG ID and Password</string>
    <string name="idLogin">Enter your ID number</string>
    <string name="passwordLogin">Enter your Password </string>
    <string name="enterButton">Enter </string>
    <string name="guestButton">Guest</string>
    <string name="nextButton">Next</string>
    <string name="okButton">OK</string>
    <string name="title_activity_degree_choose_window">Degree Choose Window</string>
    <string name="hello_world">Hello world!</string>
    <string name="choose_faculty">Choose Your Degree</string>
    <string name="choose_course"> choose your course</string>
    <string name="cs_headline"> Computers Science</string>
    <string name="graphic_planner">Graphic Planner</string>
    <string name="Private_details">Personal Details</string>
    <string name="change_degree">Change Degree</string>
    <string name="change_user">Change User</string>
    <string name="help">Help</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_graphic__planner">Graphic Planner</string>
    <string name="title_activity_private_details">Private Details</string>
    <string name="title_activity_help">Help</string>
    <string name="action_search">Search course name/number</string>
    <string name="add_button">Add</string>

    <!-- we need to get this data from UG -->

    <string-array name="computer_science_degree_types_array ">
        <item>CS - Three Year</item>
        <item>CS - Four Years</item>
        <item>CS - Computer Engineering</item>
        <item>CS - Software Engineering</item>
        <item>Physics - Three Year</item>
        <item>Physics - Four Years</item>
        <item>EE - Computer Engineering</item>
        <item>EE - Software Engineering</item>
        <item>Mathematics - Four Years</item>
        <item>Mathematics - Three years</item>
        <item>Medicine - Six Years</item>
    </string-array>
    <string-array name="menu_list">
        <item>Graphic Planner</item>
        <item>Personal Details</item>
        <item>Choose Degree</item>
        <item>Help</item>
        <item>Change User</item>
    </string-array>
    <string-array name="semesterOptions">
        <item>Spring</item>
        <item>Summer</item>
        <item>Winter</item>
    </string-array>
    <string-array name="yearOptions">
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </string-array>

    <string-array name="personal_details_list">
         <item>נכון לתאריך: 15.05.14</item>
         <item>שם: ישראל ישראלי</item>
         <item>ת.ז.: 123456789</item>
         <item>מסלול: מדעי המחשב</item>
         <item>תואר: מוסמך למדעים במדעי המחשב</item>
         <item>ממוצע כללי: 95.6</item>
         <item>שיעור הצלחות כללי: 100</item>
         <item>נקודות מצטברות: 110</item>
         <item>סה"כ נקודות דרושות לתואר: 118</item>
         <item>נקודות חובה שנצברו: 80/80</item>
         <item>נקודות רשימה א שנצברו: 20/20</item>
         <item>נקודות רשימה ב שנצברו: 10/10</item>
         <item>נקודות בחירה חופשית שנצברו: 0/8</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Degree Planner</string>
    <string name="spring">Spring</string>
    <string name="winter">Winter</string>
    <string name="summer">Summer</string>
    <string name="problematic">Problematic</string>
    <string name="passed">Passed</string>
    <string name="failed">Failed</string>
    <string name="taking">Currently Taking</string>
    <string name="none"></string>
    <string name="grade">Grade: </string>
    <string name="status">Status: </string>
    <string name="moveCourse">Move Semester</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="selectYear">Select Year: </string>
    <string name="selectSemester">Select Semester: </string>
    <string name="button_faild_course">Physics </string>
    <string name="button_course_i_take_now">Mathematics </string>
    <string name="button_course_i_passed">Sport </string>
    <string name="button_warning">Biology </string>
    <string name="faild_course_explaind"><p><b>Meaning: </b></p>Unfortunately, you have failed this course.</string>
    <string name="warning_explaind"><p><b>Meaning: </b></p>The course has problems with it\'s prequal requirments courses.</string>
    <string name="Courses_passed_already"><p><b>Meaning: </b></p>You have passed this course.</string>
    <string name="courses_i_take_now_explaind"><p><b>Meaning: </b></p>The course is either currently taken, or is taken in the future.</string>
    <string name="course_i_take_explaind_title">These are the explanations for the icons in courses buttons:</string>

</resources>