<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_i_take_explaind_title"
        android:textStyle="" 
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <Button
            android:id="@+id/Button03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/button_blue_selector"
            android:drawableRight="@drawable/warning"
            android:text="@string/button_warning"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_warning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button03"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/warning_explaind" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_blue_selector"
            android:drawableRight="@drawable/passed"
            android:text="@string/button_course_i_passed"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button02"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/Courses_passed_already" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_blue_selector"
            android:drawableRight="@drawable/taking_now"
            android:text="@string/button_course_i_take_now"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_takes_now"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Button01"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/courses_i_take_now_explaind" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_blue_selector"
            android:drawableRight="@drawable/failed"
            android:text="@string/button_faild_course"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/faild_course_explaind" />
    </RelativeLayout>

</LinearLayout>